web-site/redirect/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redirect-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redirect-service
  template:
    metadata:
      labels:
        app: redirect-service
    spec:
      containers:
        - name: redirect-service
          image: ghcr.io/week-book/redirect-service
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 15m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 96Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          imagePullPolicy: IfNotPresent
