web-site/redirect/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redirect-service
spec:
  type: ClusterIP
  selector:
    app: redirect-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
